# two_toothbrushes_api

./: .env_sample  .gitignore  Cargo.toml  LICENSE
.sqlx/: query-08006a14d9457e5b503053c617fba7ef2ab9bbe1ac1d9aa167391bc3a2934381.json  query-51a4ecfa67c078be16e55e99b4cca6fb991c61e79da879e8540997efa66dcf5a.json  query-7379859b4062eae440a6581f7b24e3c48bb9cd4427a947157d669c1c0cc4f649.json  query-a16e05e95314eaf5563e2e9371d686e48238c7a7ca5455833137992c3087547b.json  query-a2fb22b1a4fed42ee7ba2097ed6c9960d30317b01de7bac8f8b8297eb903a200.json  query-e1aae31de749ffa8e9907b19bc2db8851a77f0a10201f4fe8feb47bcfe5d93c8.json
migrations/: 20260301140006_create_users_table.sql  20260301145135_create_groups_table.sql  20260301152749_create_fk_users_groups_table.sql  20260315113805_users_group_id_not_null.sql
src/: lib.rs  main.rs
src/app/use_case/: auth_group.rs  create_group.rs  create_user.rs  generate_pix.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: claim.rs  group.rs  mod.rs  payment.rs  user.rs
src/domain/repository/: auth_repository.rs  group_repository.rs  mod.rs  pix_repository.rs  user_repository.rs
src/domain/services/: password_hasher.rs
src/domain/value_object/: group_id.rs  hashed_password.rs  mod.rs  user_id.rs
src/insfractuture/: mod.rs
src/insfractuture/config/: migration.rs  mod.rs  settings.rs
src/insfractuture/http/: auth_controller.rs  mod.rs  pix_controller.rs
src/insfractuture/init/: init_controller.rs  mod.rs
src/insfractuture/jwt/: jwt_auth_repository.rs  mod.rs
src/insfractuture/persistence/: mappers.rs  mod.rs  (+5 more)
(+13 files in other folders)
