[package]
name = "two_toothbrushes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
uuid = { version = "1.21.0", features = ["v8"] }
chrono = { version = "0.4.44", features = ["serde"] }
