[package]
name = "two_toothbrushes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "uuid",
  "chrono",
] }
uuid = { version = "1.21.0", features = ["v8", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
envy = "0.4.2"
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = "0.10.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
